k8s-file/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: jekyll
  name: jekyll
  namespace: development
spec:
  containers:
  - image:  kodekloud/jekyll-serve
    name: jekyll
    volumeMounts:
    - mountPath:  /site
      name:  site 
  volumes:
  - name:  site
    persistentVolumeClaim:
      claimName: jekyll-site
