k8s-file/drupal-mysql.yml
---
apiVersion: v1
kind: Service
metadata: 
  name: drupal-mysql-service
spec: 
  ports: 
    - 
      name: drupal-mysql
      port: 3306
      protocol: TCP
  selector: 
    app: drupal-mysql
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: drupal-mysql
spec: 
  replicas: 1
  template: 
    metadata: 
      labels: 
        app: drupal-mysql
    spec: 
      containers: 
        - 
          image: "mysql:5.7"
          name: cont-drupal-mysql
          ports: 
            - 
              containerPort: 3306
              name: mysql
              protocol: TCP
          volumeMounts: 
            - 
              mountPath: /var/lib/mysql
              name: vol-drupal
              subPath: dbdata
      volumes: 
        - 
          name: vol-drupal
          persistentVolumeClaim: 
            claimName: drupal-mysql-pvc
