k8s-file/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-service
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
    name:  client
  - port: 16379
    targetPort: 16379
    name: gossip
  selector:
    app: redis-cluster
