k8s-file/laravel-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: laravel-app
  annotations:
    kubernetes.io/ingress.global-static-ip-name: laravel-ip
  labels:
    app: laravel-app
spec:
  backend:
    serviceName: laravel-backend
    servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: laravel-backend
  labels:
    app: laravel-app
spec:
  type: NodePort
  selector:
    app: laravel-app
  ports:
  - port: 80
    targetPort: 80
---




apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: omnifood-app
  annotations:
    kubernetes.io/ingress.global-static-ip-name: omnifoodapp-ip
  labels:
    app: omnifood-app
spec:
  backend:
    serviceName: omnifoodapp-backend
    servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: omnifood-backend
  labels:
    app: omnifood-app
spec:
  type: NodePort
  selector:
    app: omnifood-app
  ports:
  - port: 80
    targetPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: omnifood-app
  labels:
    app: omnifood-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: omnifood-app
  template:
    metadata:
      labels:
        app: omnifood-app
    spec:
      containers:
      - name: omnifood-app
        image: gcr.io/proxmox-200115/omnifood-app
        imagePullPolicy: Always
        ports:
        - containerPort: 80
