k8s-file/sanic-svc-ig.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sanic-app
  labels:
    app: sanic
spec:
  selector:
    matchLabels:
      app: sanic
  template:
    metadata:
      labels:
        app: sanic
    spec:
      containers:
      - name: sanic-app
        image: asia.gcr.io/proxmox-200115/sanic-ubuntu:v1
        ports:
        - containerPort: 8000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sanic-app
  annotations:
    kubernetes.io/ingress.global-static-ip-name: sanicapp-ip
  labels:
    app: sanic
spec:
  backend:
    serviceName: sanic-backend
    servicePort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: sanic-backend
  labels:
    app: sanic
spec:
  type: NodePort
  selector:
    app: sanic
  ports:
  - port: 8000
    targetPort: 8000
